# zellij-tab-jump

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
hooks/: pre-commit
src/: main.rs
